--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=3b63cb7203de531a7f542a9307b470c7"></script>  -->
-    <title>React App</title>
+    <title>在线检测</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
